// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test.table() builder > auto-snapshot from test callback > auto-snapshot function mode > add(1, 2) → 3 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  custom: 'snapshot data'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > auto-snapshot from test callback > auto-snapshot generic mode > test 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > cases helper > upperCase('hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
HELLO
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > cases helper > upperCase('world') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
world
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
WORLD
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > multi-argument snapshots > add(1, 2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > multi-argument snapshots > add(10, 20) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
10
────────────────────────────────────────────────────
20
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
30
╚══════════════════════════════════════════════════╝"
`;

exports[`circular structure handling > identity2({ name: 'test', self: [Circular] }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  name: 'test',
  self: [Circular]
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'test',
  self: [Circular]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .casesInput() > add(1, 2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .casesInput() > add(3, 4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
────────────────────────────────────────────────────
4
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
7
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .casesInput() > add(5, 6) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
────────────────────────────────────────────────────
6
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
11
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .describeInputs() > edge cases > add(-1, 1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
────────────────────────────────────────────────────
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .describeInputs() > edge cases > add(0, 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
────────────────────────────────────────────────────
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .describeInputs() > edge cases > add(1, 1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
2
╚══════════════════════════════════════════════════╝"
`;
